--- a/app/views/customer/profile.html.erb
+++ b/app/views/customer/profile.html.erb
@@ -1,151 +1,119 @@
-<div class="container">
-<div class="page-header">
-	<h1>Profile</h1>
-</div>
 
-<div>
-	<div class="row">
-		  <div class="col-md-2">
-		    <%= link_to "Change image", class: "thumbnail" do %>
-		      <img src="assets/ph.jpg" alt="..." class="img-circle">
-		    <% end %>
-		  </div>
-	</div>	
-</div>
-<div>
-	<div class="well">
-		<div class="row">
-			<div class="col-md-6">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<div class="panel-title">
-							Recently searched stylists
-						</div>
-					</div>
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-sm-4">
-								<div class="thumbnail">
-									<img src="assets/ph.jpg">
-								</div>
-							</div>
-							<div class="col-sm-8">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</div>
-						</div>
-						<hr>
-						<div class="row">
-							<div class="col-sm-4">
-								<div class="thumbnail">
-									<img src="assets/ph.jpg">
-								</div>
-							</div>
-							<div class="col-sm-8">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<div class="panel-title">
-							Recommended stylists
-						</div>
-					</div>
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-sm-4">
-								<div class="thumbnail">
-									<img src="assets/ph.jpg">
-								</div>
-							</div>
-							<div class="col-sm-8">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</div>
-						</div>
-						<hr>
-						<div class="row">
-							<div class="col-sm-4">
-								<div class="thumbnail">
-									<img src="assets/ph.jpg">
-								</div>
-							</div>
-							<div class="col-sm-8">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-12">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<div class="panel-title">
-							Favorite stylists
-						</div>
-					</div>
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-sm-2">
-								<div class="thumbnail">
-									<img src="assets/ph.jpg">
-								</div>
-							</div>
-							<div class="col-sm-2">
-								<div class="thumbnail">
-									<img src="assets/ph.jpg">
-								</div>
-							</div>
-							<div class="col-sm-2">
-								<div class="thumbnail">
-									<img src="assets/ph.jpg">
-								</div>
-							</div>
-							<div class="col-sm-2">
-								<div class="thumbnail">
-									<img src="assets/ph.jpg">
-								</div>
-							</div>
-							<div class="col-sm-2">
-								<div class="thumbnail">
-									<img src="assets/ph.jpg">
-								</div>
-							</div>
-							<div class="col-sm-2">
-								<div class="thumbnail">
-									<img src="assets/ph.jpg">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+		<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+		<style type="text/css">
+			#edit-style, #edit-global-style, #faq{
+				display: none;
+			}
+			.list-group-item{
+				cursor: pointer;
+			}
+		</style>
+		<script type="text/javascript">
+			$("body").click(function (event){
+				var target = $(event.target);
+				if(target.is(".list-group-item")){
+					$("#menu-1").removeClass("active");
+					$("#menu-2").removeClass("active");
+					$("#menu-3").removeClass("active");
+					$("#menu-4").removeClass("active");
+					target.addClass("active");
+				}
+				if(target.is("#menu-1")){
+					$("#personal-information").css("display", "block");
+					$("#edit-style").css("display", "none");
+					$("#edit-global-style").css("display", "none");
+					$("#faq").css("display", "none");
+				}else if(target.is("#menu-2"))
+				{
+					$("#personal-information").css("display", "none");
+					$("#edit-style").css("display", "block");
+					$("#edit-global-style").css("display", "none");
+					$("#faq").css("display", "none");
+				}else if(target.is("#menu-3"))
+				{
+					$("#personal-information").css("display", "none");
+					$("#edit-style").css("display", "none");
+					$("#edit-global-style").css("display", "block");
+					$("#faq").css("display", "none");
+				}else if(target.is("#menu-4"))
+				{
+					$("#personal-information").css("display", "none");
+					$("#edit-style").css("display", "none");
+					$("#edit-global-style").css("display", "none");
+					$("#faq").css("display", "block");
+				}
+			});
+		</script>
+	</head>
 
-		
-	</div>
-</div>
+  <body>
 
-</div>
+	<div class="container">
+		<div class="row row-offcanvas row-offcanvas-right">
+			<div class="col-xs-12 col-sm-9">
+				<p class="pull-right visible-xs">
+					<button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">
+						MENU
+					</button>
+				</p>
+				<div class="row">
+
+					<!-- PERSONAL INFORMATOIN -->
+					<div id="personal-information">
+						<div id="profile-header" class="page-header">
+							<h1>Personal information</h1>
+						</div>
+					</div>
+
+					<!-- EDIT STYLE -->
+					<div id="edit-style">
+						<div id="profile-header" class="page-header">
+							<h1>Edit style</h1>
+						</div>
+					</div>
+
+					<!-- EDIT GLOBAL STYLE -->
+					<div id="edit-global-style">
+						<div id="profile-header" class="page-header">
+							<h1>Edit global style</h1>
+						</div>
+					</div>
+
+					<!-- FAQ -->
+					<div id="faq">
+						<div id="profile-header" class="page-header">
+							<h1>FAQ</h1>
+						</div>
+					</div>
+
+					
+				</div><!--/row-->
+			</div><!--/.col-xs-12.col-sm-9-->
+			<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+				<div class="list-group">
+					<a id="menu-1" class="list-group-item active">Personal information</a>
+					<a id="menu-2" class="list-group-item">Edit your style</a>
+					<a id="menu-3" class="list-group-item">Edit global style settings</a>
+					<a id="menu-4" class="list-group-item">FAQ</a>
+				</div>
+			</div><!--/.sidebar-offcanvas-->
+		</div><!--/row-->
+		<hr>
+		<footer>
+			<p>&copy; Stylific 2014</p>
+		</footer>
+	</div><!--/.container-->
+</body>
+</html>
